GEODE-10466: Migrate from javax.* to jakarta.* namespace for Jakarta EE 10 compliance
This commit completes the migration from Java EE (javax.*) to Jakarta EE 10
(jakarta.*) APIs across the entire Geode codebase to ensure compatibility
with modern application servers and frameworks.

## Core Changes:

### Package Namespace Migration:
- javax.servlet.* → jakarta.servlet.*
- javax.resource.* → jakarta.resource.*
- javax.transaction.* → jakarta.transaction.*
- javax.xml.bind.* → jakarta.xml.bind.*
- javax.mail.* → jakarta.mail.*

### Build System Updates:
- Updated all build.gradle files with Jakarta EE 10 dependencies
- Migrated expected-pom.xml files to reflect new dependency coordinates
- Updated dependency management to use jakarta.platform:jakarta.jakartaee-bom

### HTTP Client Migration (HttpClient 4.x → 5.x):
- Migrated org.apache.http.* → org.apache.hc.* packages
- Updated SSL configuration API (SSLConnectionSocketFactory changes)
- Replaced LaxRedirectStrategy with default redirect handling
- Enhanced authentication API with improved security (char[] passwords)
- Added comprehensive migration comments explaining API changes

### Spring Security Migration (5.x → 6.x):
- Deprecated WebSecurityConfigurerAdapter → SecurityFilterChain pattern
- Updated XSS protection configuration (now enabled by default)
- Modernized role-based authorization API
- Added detailed comments explaining behavioral changes

### Application Components:
- Updated Geode Pulse web interface for Jakarta EE compliance
- Migrated session management in geode-modules extensions
- Updated REST API controllers and security configurations
- Fixed JTA transaction management APIs
- Updated servlet filters and listeners

### Test Infrastructure:
- Updated all test classes to use Jakarta APIs
- Fixed integration and distributed test configurations
- Updated mock implementations for Jakarta interfaces

## Technical Details:

### Compatibility Notes:
- Maintains backward compatibility where possible
- Pr